--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,24 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch full history including tags
+        
+    - name: Install Nix
+      uses: cachix/install-nix-action@v27
+      with:
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+          
+    - name: Build and test Rust crate
+      run: |
+        nix develop --command cargo check
+        nix develop --command cargo test
+        nix develop --command cargo run
+        echo "Rust crate built and tested successfully!"
+        
+    - name: Build Nix package
+      run: |
+        nix build
+        echo "Nix package built successfully!"
       
     - name: Prepare files for deployment
       run: |
