--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jon Hermansen <jon@jh86.org>"]
 edition = "2021"
 description = "Jon Hermansen's resume generator"
 repository = "https://github.com/jonhermansen/resume"
-license = "UNLICENSED"
+license-file = "LICENSE"
 keywords = ["resume", "cv", "generator"]
 categories = ["command-line-utilities"]
 readme = "README.md"
