--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 
 permissions:
   contents: write
+  id-token: write
 
 jobs:
   deploy:
@@ -74,6 +75,18 @@ jobs:
       run: |
         cargo check
         echo "Rebuilt with version: ${{ steps.release_info.outputs.version }}"
+        
+    - name: Debug token availability
+      run: |
+        if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+          echo "ERROR: CARGO_REGISTRY_TOKEN is empty or not set"
+          echo "Available secrets (masked): ${#CARGO_REGISTRY_TOKEN}"
+          exit 1
+        else
+          echo "CARGO_REGISTRY_TOKEN is available (length: ${#CARGO_REGISTRY_TOKEN})"
+        fi
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         
     - name: Publish to crates.io
       run: |
