Linked to my homepage from Rust crate metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "jonhermansen-resume"
 version = "0.1.0"
 authors = ["Jon Hermansen <jon@jh86.org>"]
 edition = "2021"
-description = "Jon Hermansen's resume generator"
+description = "My personal resume generator"
+homepage = "https://jh86.org/"
 repository = "https://github.com/jonhermansen/resume"
 license-file = "LICENSE"
 keywords = ["resume", "cv", "generator"]
