--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "jonhermansen-resume"
-version = "0.2.1752725770"
+version = "0.2.1752726920"
 authors = ["Jon Hermansen <jon@jh86.org>"]
 edition = "2021"
-description = "Jon Hermansen's resume generator"
+description = "My personal resume generator"
+homepage = "https://jh86.org/"
 repository = "https://github.com/jonhermansen/resume"
 license-file = "LICENSE"
 keywords = ["resume", "cv", "generator"]
