--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,21 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
-    runs-on: ubuntu-24.04-arm # generally faster than x86 to start
+    runs-on: ubuntu-24.04-arm
     steps:
     - uses: actions/checkout@v5.0.0
     - uses: cachix/install-nix-action@v31.7.0
-    - run: nix build .#resume
-    - uses: actions/deploy-pages@v4.0.5
+    - run: |
+        nix build
+        cp result resume.pdf
+    - uses: actions/upload-pages-artifact@v4.0.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: .
-        publish_branch: gh-pages
+        path: |
+          index.html
+          resume.pdf
+    - uses: actions/deploy-pages@v4.0.5
