use default artifact path and avoid listing each file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,17 @@ permissions:
   id-token: write
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-24.04-arm
     steps:
     - uses: actions/checkout@v5.0.0
     - uses: cachix/install-nix-action@v31.7.0
     - run: |
         nix build
-        cp result resume.pdf
+        mkdir _site
+        cp index.html _site/
+        cp result _site/resume.pdf
+
+  deploy:
     - uses: actions/upload-pages-artifact@v4.0.0
-      with:
-        path: |
-          index.html
-          resume.pdf
     - uses: actions/deploy-pages@v4.0.5
