Simplified build steps. Fixed missing font issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,8 @@ jobs:
       - uses: actions/checkout@v5.0.0
       - uses: cachix/install-nix-action@v31.7.0
       - run: |
-          nix build
+          nix run .#build
           mkdir -p _site
-          cp index.html _site/
-          cp result _site/resume.pdf
+          cp index.html resume.pdf _site/
       - uses: actions/upload-pages-artifact@v4.0.0
       - uses: actions/deploy-pages@v4.0.5
